Fri Apr 15 08:30:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3943_Regression_Test.cpp:
          Fixed mingw warning

Fri Apr 15 07:51:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
          Disable coredx by default

Thu Apr 14 19:17:04 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_3943_Regression_Test.cpp:

          Scoreboard cleanup. "small" appears to be a reserved word on some
          win32 builds.

Thu Apr 14 09:27:20 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_freebsd.GNU:
          Removed unused SOBUILD variable.

Thu Apr 14 07:58:19 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/ACE.cpp:
        * ace/config-lynxos.h:
        * ace/os_include/sys/os_resource.h:
          Removed legacy rlimit related settings.

Wed Apr 13 13:29:13 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_3943_Regression_Test.cpp:

          Still more scoreboard cleanup. The ACE defined iovec struct uses
          u_long for the iovlen rather than size_t, and on x64 systems, size_t
          is actually larger than u_long, so a "possible loss of data" warning
          is generated when assigning from a size_t to a u_long.

Wed Apr 13 09:39:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Time_Value_Test.cpp:
        * tests/Bug_2434_Regression_Test.cpp:
          Overflow problem is part of bugzilla 2434, only do the test there,
          that way Time_Value_Test should run in all builds

        * tests/ACE_Test.cpp:
        * tests/Bug_3758_Regression_Test.cpp:
        * tests/Date_Time_Test.cpp:
          Layout changes

Wed Apr 13 07:41:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Time_Value.inl:
          Removed truncate_cast because it gives problems on Windows. Thanks
          to Jonathan Saxton <jsaxton at appsecinc dot com>
